Basic emoji control activity created. points decrease as time progresses.  Max 100, min 0.  buttons work to increase points.  TextView of the player's emoji in the center.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,6 +36,13 @@
       android:layout_height="match_parent"
       android:text="Game Menu"/>
 
+    <Button
+      android:id="@+id/my_pet_button"
+      style="@style/Widget.AppCompat.Button"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:text="@string/my_pet"/>
+
   </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
