Changed Game Menu to Sign in Menu.

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,7 @@
   android:background="@drawable/gradient_list"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="edu.cnm.deepdive.emojipets.GameMenuActivity">
+  tools:context="edu.cnm.deepdive.emojipets.SignInActivity">
 
   <TextView
     android:id="@+id/textView4"
@@ -22,10 +22,14 @@
     android:id="@+id/imageView"
     android:layout_width="259dp"
     android:layout_height="123dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="68dp"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="0.504"
     app:layout_constraintLeft_toLeftOf="@id/layout"
     app:layout_constraintRight_toRightOf="@id/layout"
     app:layout_constraintTop_toTopOf="@id/layout"
+    app:layout_constraintVertical_bias="0.0"
     app:srcCompat="@drawable/emoji_pets_title"/>
 
   <com.andexert.library.RippleView
@@ -52,87 +56,57 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/button"
-    app:layout_constraintHorizontal_bias="0.501"
+    app:layout_constraintBottom_toTopOf="@+id/imageButton2"
     app:layout_constraintLeft_toLeftOf="@id/layout"
     app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintBottom_toTopOf="@+id/imageButton2"
     app:layout_constraintTop_toBottomOf="@id/imageView"
     app:srcCompat="@drawable/new_game_button"
-    tools:layout_editor_absoluteY="170dp"/>
+    />
 
   <ImageButton
     android:id="@+id/imageButton2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@null"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="0.501"
     app:layout_constraintLeft_toLeftOf="@id/layout"
     app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintBottom_toTopOf="@+id/imageButton3"
     app:layout_constraintTop_toBottomOf="@id/imageButton"
-    app:srcCompat="@drawable/saved_button"
-    tools:layout_editor_absoluteY="291dp"/>
-  <ImageButton
-    android:id="@+id/imageButton3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@null"
-    app:layout_constraintLeft_toLeftOf="@id/layout"
-    app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintBottom_toBottomOf="@id/layout"
-    app:layout_constraintTop_toBottomOf="@id/imageButton2"
-    app:srcCompat="@drawable/help_button"
-    tools:layout_editor_absoluteY="402dp"/>
+    app:srcCompat="@drawable/saved_button"/>
+
   <TextView
     android:id="@+id/textView2"
     android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:fontFamily="serif"
-    android:text="New Game "
+    android:text="Sign In"
     android:textAlignment="center"
     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
     android:textSize="18sp"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.501"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.488"/>
+    app:layout_constraintTop_toBottomOf="@id/imageButton"
+    app:layout_constraintVertical_bias="0.068"/>
+
   <TextView
     android:id="@+id/textView5"
     android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     android:fontFamily="serif"
-    android:text="Continue"
-    android:textAlignment="center"
-    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-    android:textSize="18sp"
-    app:layout_constraintBottom_toTopOf="@+id/imageButton3"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/imageButton2"
-    app:layout_constraintVertical_bias="0.736"/>
-  <TextView
-    android:id="@+id/textView6"
-    android:textStyle="bold"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:fontFamily="serif"
-    android:text="Help"
+    android:text="Create Account"
     android:textAlignment="center"
     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
     android:textSize="18sp"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.502"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/imageButton3"
-    app:layout_constraintVertical_bias="0.744"/>
+    app:layout_constraintTop_toTopOf="@+id/imageButton2"
+    app:layout_constraintVertical_bias="0.736"/>
 
 </android.support.constraint.ConstraintLayout>
