--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,6 @@
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
@@ -34,7 +33,7 @@
       style="@style/Widget.AppCompat.Button"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Game Menu"/>
+      android:text="Sign In"/>
 
     <Button
       android:id="@+id/my_pet_button"
