--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,12 +25,14 @@
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/nav_header_vertical_spacing"
     android:text="Android Studio"
+    android:textColor="@color/colorPrimaryDark"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
   <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:textColor="@color/colorPrimaryDark"
     android:text="android.studio@android.com"/>
 
 </LinearLayout>
