--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,38 +9,44 @@
   tools:context="edu.cnm.deepdive.emojipets.MainActivity"
   tools:showIn="@layout/app_bar_main">
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
-
   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
+    android:background="@drawable/emoji_background"
     android:orientation="horizontal"
+    android:gravity="center_horizontal"
     app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <Button
+    <ImageButton
       android:id="@+id/button"
       style="@style/Widget.AppCompat.Button"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Sign In"/>
+      android:background="@null"
 
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/sign_in_button"
+      />
     <Button
       android:id="@+id/my_pet_button"
       style="@style/Widget.AppCompat.Button"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="@string/my_pet"/>
+      android:background="@null"
+      android:text="@string/my_pet"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="@id/layout"
+      app:layout_constraintRight_toRightOf="@id/layout"
+      app:layout_constraintTop_toTopOf="parent"/>
 
   </LinearLayout>
 
