--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,45 +3,11 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/main_activity"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
   tools:context="edu.cnm.deepdive.emojipets.MainActivity"
   tools:showIn="@layout/app_bar_main">
-
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
-
-  <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:orientation="horizontal"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-    <Button
-      android:id="@+id/button"
-      style="@style/Widget.AppCompat.Button"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="Sign In"/>
-
-    <Button
-      android:id="@+id/my_pet_button"
-      style="@style/Widget.AppCompat.Button"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="@string/my_pet"/>
-
-  </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
