--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,35 +4,19 @@
   tools:showIn="navigation_view">
 
   <group android:checkableBehavior="single">
+    <!--TODO find a way to set title to the pet's name-->
     <item
-      android:id="@+id/nav_camera"
-      android:icon="@drawable/ic_menu_camera"
-      android:title="Import"/>
+      android:id="@+id/pet_fragment"
+      android:icon="@drawable/ic_pets_black_24dp"
+      android:title="My Pet"/>
     <item
-      android:id="@+id/nav_gallery"
-      android:icon="@drawable/ic_menu_gallery"
-      android:title="Gallery"/>
+      android:id="@+id/friends_fragment"
+      android:icon="@drawable/ic_people_outline_black_24dp"
+      android:title="My Friends"/>
     <item
-      android:id="@+id/nav_slideshow"
-      android:icon="@drawable/ic_menu_slideshow"
-      android:title="Slideshow"/>
-    <item
-      android:id="@+id/nav_manage"
-      android:icon="@drawable/ic_menu_manage"
-      android:title="Tools"/>
+      android:id="@+id/settings_fragment"
+      android:icon="@drawable/ic_settings_black_24dp"
+      android:title="Settings"/>
   </group>
-
-  <item android:title="Communicate">
-    <menu>
-      <item
-        android:id="@+id/nav_share"
-        android:icon="@drawable/ic_menu_share"
-        android:title="Share"/>
-      <item
-        android:id="@+id/nav_send"
-        android:icon="@drawable/ic_menu_send"
-        android:title="Send"/>
-    </menu>
-  </item>
 
 </menu>
