Fixed the scrolling issue in my friends by changing it to two fragments, one for following and another for followers.  Set up the settings fragment so it has a cardview and an easy way to change username, pet's name, and pet emoji.  It still needs to be set up in the fragment so that values and buttons change things in the database.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,9 +10,13 @@
       android:icon="@drawable/ic_pets_black_24dp"
       android:title="My Pet"/>
     <item
-      android:id="@+id/friends_fragment"
+      android:id="@+id/following_fragment"
+      android:icon="@drawable/ic_following_black_24dp"
+      android:title="Following"/>
+    <item
+      android:id="@+id/followers_fragment"
       android:icon="@drawable/ic_people_outline_black_24dp"
-      android:title="My Friends"/>
+      android:title="Followers"/>
     <item
       android:id="@+id/settings_fragment"
       android:icon="@drawable/ic_settings_black_24dp"
