--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -4,29 +4,32 @@
   android:layout_width="match_parent"
   android:orientation="vertical">
 
-  <LinearLayout
-    android:id="@+id/search_for_friend"
+  <TabHost
+    android:id="@+id/tab_host"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <AutoCompleteTextView
-      android:id="@+id/search_friends_results"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:hint="@string/search_for_a_friend"
-      android:inputType="textAutoComplete|textAutoCorrect"/>
-  </LinearLayout>
+    android:layout_height="match_parent">
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+      <TabWidget
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+      </TabWidget>
 
-  <ListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/following_list_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+      <FrameLayout
+        android:id="@+id/tab_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-  <ListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/followers_list_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+        <include layout="@layout/following"/>
+        <include layout="@layout/followers"/>
+      </FrameLayout>
+
+
+
+    </LinearLayout>
+  </TabHost>
+
 </LinearLayout>
