--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -6,108 +6,134 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<TextView
-  android:id="@+id/courage"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginEnd="8dp"
-  app:layout_constraintEnd_toEndOf="parent"
-  app:layout_constraintHorizontal_bias="0.5"
-  app:layout_constraintStart_toEndOf="@+id/mana"
-  app:layout_constraintTop_toBottomOf="@+id/health"
-  tools:text="courage"/>
+  <TextView
+    android:id="@+id/courage"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toEndOf="@+id/mana"
+    app:layout_constraintTop_toBottomOf="@+id/health"
+    tools:text="courage"/>
 
-<TextView
-  android:id="@+id/mana"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginStart="8dp"
-  android:layout_marginEnd="8dp"
-  app:layout_constraintEnd_toStartOf="@+id/courage"
-  app:layout_constraintStart_toStartOf="parent"
-  app:layout_constraintTop_toBottomOf="@+id/power"
-  tools:text="mana"/>
+  <TextView
+    android:id="@+id/mana"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toStartOf="@+id/courage"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/power"
+    tools:text="mana"/>
 
-<TextView
-  android:id="@+id/health"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginTop="8dp"
-  android:layout_marginStart="8dp"
-  android:layout_marginEnd="8dp"
-  app:layout_constraintEnd_toStartOf="@+id/power"
-  app:layout_constraintHorizontal_bias="0.5"
-  app:layout_constraintStart_toStartOf="parent"
-  app:layout_constraintTop_toTopOf="parent"
-  tools:text="health"/>
+  <TextView
+    android:id="@+id/health"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toStartOf="@+id/power"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="health"/>
 
-<TextView
-  android:id="@+id/power"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginTop="8dp"
-  android:layout_marginEnd="8dp"
-  app:layout_constraintEnd_toEndOf="parent"
-  app:layout_constraintHorizontal_bias="0.5"
-  app:layout_constraintStart_toEndOf="@+id/health"
-  app:layout_constraintTop_toTopOf="parent"
-  tools:text="power"/>
+  <TextView
+    android:id="@+id/power"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toEndOf="@+id/health"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="power"/>
 
-<Button
-  android:id="@+id/boost_power"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginBottom="8dp"
-  android:layout_marginEnd="8dp"
-  android:text="Power Boost"
-  app:layout_constraintBottom_toTopOf="@+id/boost_courage"
-  app:layout_constraintEnd_toEndOf="parent"
-  app:layout_constraintHorizontal_bias="0.5"
-  app:layout_constraintStart_toEndOf="@+id/boost_health"/>
-<Button
-  android:id="@+id/boost_mana"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginBottom="8dp"
-  android:layout_marginStart="8dp"
-  android:layout_marginEnd="8dp"
-  android:text="Mana Boost"
-  app:layout_constraintBottom_toBottomOf="parent"
-  app:layout_constraintEnd_toStartOf="@+id/boost_courage"
-  app:layout_constraintStart_toStartOf="parent"/>
-<Button
-  android:id="@+id/boost_health"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginBottom="8dp"
-  android:layout_marginStart="8dp"
-  android:layout_marginEnd="8dp"
-  android:text="Health Boost"
-  app:layout_constraintBottom_toTopOf="@+id/boost_mana"
-  app:layout_constraintEnd_toStartOf="@+id/boost_power"
-  app:layout_constraintStart_toStartOf="parent"/>
-<Button
-  android:id="@+id/boost_courage"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginBottom="8dp"
-  android:layout_marginEnd="8dp"
-  android:text="Courage Boost"
-  app:layout_constraintBottom_toBottomOf="parent"
-  app:layout_constraintEnd_toEndOf="parent"
-  app:layout_constraintHorizontal_bias="0.5"
-  app:layout_constraintStart_toEndOf="@+id/boost_mana"/>
-<TextView
-  android:id="@+id/character"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_marginTop="8dp"
-  android:layout_marginBottom="8dp"
-  android:text="🍜"
-  android:textSize="128sp"
-  app:layout_constraintBottom_toTopOf="@+id/boost_health"
-  app:layout_constraintLeft_toLeftOf="parent"
-  app:layout_constraintRight_toRightOf="parent"
-  app:layout_constraintTop_toBottomOf="@+id/mana"/>
+  <TextView
+    android:id="@+id/pet_status"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="18dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/mana"/>
+
+  <EditText
+    android:id="@+id/pet_status_edit"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="18dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintRight_toLeftOf="@id/pet_status_edit"
+    app:layout_constraintTop_toBottomOf="@+id/mana"/>
+
+  <Button
+    android:id="@+id/pet_status_set_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="18dp"
+    app:layout_constraintLeft_toRightOf="@id/pet_status_edit"
+    app:layout_constraintTop_toBottomOf="@+id/mana"
+    android:text="post"/>
+
+  <Button
+    android:id="@+id/boost_power"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:text="Power Boost"
+    app:layout_constraintBottom_toTopOf="@+id/boost_courage"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toEndOf="@+id/boost_health"/>
+  <Button
+    android:id="@+id/boost_mana"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:text="Mana Boost"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/boost_courage"
+    app:layout_constraintStart_toStartOf="parent"/>
+  <Button
+    android:id="@+id/boost_health"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:text="Health Boost"
+    app:layout_constraintBottom_toTopOf="@+id/boost_mana"
+    app:layout_constraintEnd_toStartOf="@+id/boost_power"
+    app:layout_constraintStart_toStartOf="parent"/>
+  <Button
+    android:id="@+id/boost_courage"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:text="Courage Boost"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toEndOf="@+id/boost_mana"/>
+  <TextView
+    android:id="@+id/character"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:text="🍜"
+    android:textSize="128sp"
+    app:layout_constraintBottom_toTopOf="@+id/boost_health"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/mana"/>
 
 </android.support.constraint.ConstraintLayout>
