google OAuth is working now.  just create the credentials on the Google Cloud Platform like we did in the demo.
1) go to https://developers.google.com/identity/sign-in/android/start-integrating and click on configure a project, name it emojipets

2) select android and put in the package name (edu.cnm.deepdive.emojipets) and your secret sha-1 key, which you look up the terminal with the command Nick posted in slack (keystore command)

3) get the google sign in ClientID for the Web application type in the GOogle CLoud Platform APIs and Services credentials section for the newly created emojipets project

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -51,7 +51,7 @@
   <!--app:srcCompat="@drawable/new_game_button"-->
   <!--tools:layout_editor_absoluteY="170dp"/>-->
 
-  <Button
+  <com.google.android.gms.common.SignInButton
     android:id="@+id/imageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
