--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,9 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/sign_out"
     android:orderInCategory="100"
-    android:title="@string/action_settings"
+    android:title="@string/sign_out"
     app:showAsAction="never"/>
 
 </menu>
