--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -31,98 +31,71 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:fontFamily="casual"/>
-      <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter a username:"
-        android:fontFamily="casual"/>
-      <!--TODO get username as string resource for hint-->
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
-          android:id="@+id/create_username_edittext"
+        <android.support.design.widget.TextInputLayout
+          android:id="@+id/create_username_edittext_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:hint="Username..."
-          android:fontFamily="casual"/>
-        <Button
-          android:id="@+id/create_username_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="ok 👍!"/>
-        <TextView
-          android:id="@+id/create_username_textview"
-          android:clickable="true"
-          android:focusable="true"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:visibility="gone"
-          android:fontFamily="casual"/>
+          card_view:hintEnabled="true"
+          card_view:hintAnimationEnabled="true"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          android:fontFamily="casual">
+          <android.support.design.widget.TextInputEditText
+            android:id="@+id/create_username_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter a cool user-name "/>
+        </android.support.design.widget.TextInputLayout>
       </LinearLayout>
-      <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter a name for your emoji:"
-        android:fontFamily="casual"/>
-      <!--TODO get username as string resource for hint-->
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
-          android:id="@+id/create_petname_edittext"
+        <android.support.design.widget.TextInputLayout
+          android:id="@+id/create_petname_edittext_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:hint="Your emoji's name..."
-          android:fontFamily="casual"/>
-        <Button
-          android:id="@+id/create_petname_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="ok 👍!"/>
-        <TextView
-          android:id="@+id/create_petname_textview"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:clickable="true"
-          android:focusable="true"
-          android:visibility="gone"
-          android:fontFamily="casual"/>
+          card_view:hintEnabled="true"
+          card_view:hintAnimationEnabled="true"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          android:fontFamily="casual">
+          <android.support.design.widget.TextInputEditText
+            android:id="@+id/create_petname_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="What's your emoji's name?"/>
+        </android.support.design.widget.TextInputLayout>
       </LinearLayout>
-      <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter one emoji:"
-        android:fontFamily="casual"/>
-      <!--TODO get username as string resource for hint-->
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
-          android:id="@+id/create_emoji_edittext"
+        <android.support.design.widget.TextInputLayout
+          android:id="@+id/create_emoji_edittext_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:hint="Input your emoji..."
-          android:fontFamily="casual"/>
-        <Button
-          android:id="@+id/create_emoji_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="ok 👍!"/>
-        <TextView
-          android:id="@+id/create_emoji_textview"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:clickable="true"
-          android:focusable="true"
-          android:visibility="gone"
-          android:fontFamily="casual"/>
+          card_view:hintEnabled="true"
+          card_view:hintAnimationEnabled="true"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          android:fontFamily="casual">
+          <android.support.design.widget.TextInputEditText
+            android:id="@+id/create_emoji_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="And just one emoji"/>
+        </android.support.design.widget.TextInputLayout>
       </LinearLayout>
     </LinearLayout>
   </android.support.v7.widget.CardView>
@@ -144,6 +117,8 @@
         android:id="@+id/create_account_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:shadowColor="@color/colorPrimaryDark"
         android:text="Create Account"/>
 
       <!--<com.dd.processbutton.ProcessButton-->
