--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -53,29 +53,54 @@ android:layout_height="match_parent">
     app:layout_constraintTop_toTopOf="parent"
     tools:text="power"/>
 
-  <TextView
-    android:id="@+id/pet_status"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="18dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/mana"/>
+  <!--<TextView-->
+    <!--android:id="@+id/pet_status"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="18dp"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
 
-  <EditText
-    android:id="@+id/pet_status_edit"
+  <android.support.constraint.Guideline
+    android:id="@+id/right_guide"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent=".75"/>
+
+  <android.support.design.widget.TextInputLayout
+    android:id="@+id/pet_status_edit_layout"
+    app:hintEnabled="true"
+    app:hintAnimationEnabled="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="12dp"
     android:layout_marginTop="18dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintRight_toLeftOf="@id/pet_status_edit"
-    app:layout_constraintTop_toBottomOf="@+id/mana"/>
+    app:layout_constraintTop_toBottomOf="@+id/mana"
+    app:layout_constraintRight_toRightOf="@id/right_guide">
+    <android.support.design.widget.TextInputEditText
+      android:id="@+id/pet_status_edit"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:hint="Status"/>
+  </android.support.design.widget.TextInputLayout>
+
+
+  <!--<EditText-->
+    <!--android:id="@+id/pet_status_edit"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintRight_toLeftOf="@id/pet_status_edit"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
 
   <Button
     android:id="@+id/pet_status_set_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
-    app:layout_constraintLeft_toRightOf="@id/pet_status_edit"
+    app:layout_constraintLeft_toRightOf="@id/right_guide"
     app:layout_constraintTop_toBottomOf="@+id/mana"
     android:text="post"/>
 
