I updated the code for petStatusEdit so it selects all on focus.

--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -86,6 +86,7 @@ android:layout_height="match_parent"
       android:layout_height="wrap_content"
       android:nextFocusUp="@id/pet_status_edit"
       android:nextFocusLeft="@id/pet_status_edit"
+      android:selectAllOnFocus="true"
       android:hint="Status"/>
   </android.support.design.widget.TextInputLayout>
 
