I'm over halfway through connecting views of follows to the user account, so users can go brows their follows' pets.  I used a bottom nav activity and a fragment for the follow pet so it will be easy to create a wall for the friends that can be updated like the original facebook wall.

--- a/app/src/main/res/layout/following.xml
+++ b/app/src/main/res/layout/following.xml
@@ -9,11 +9,14 @@
     android:id="@+id/search_friends_results"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:hint="@string/search_for_a_friend"
     android:inputType="textAutoComplete|textAutoCorrect"/>
   <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/following_list_view"
+    android:layout_margin="8dp"
+    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
 
