I have connected the follow views so that users can interact with followers and following from a new activity that allows them to see the pet and it's health points in a bottom nav activity.  In addition to the pet view, there is a wall view, where users can write funny things in an EditText and change the other player's wall.  It's an implementation of the original facebook wall.

--- a/app/src/main/res/layout/fragment_friend_pet.xml
+++ b/app/src/main/res/layout/fragment_friend_pet.xml
@@ -65,12 +65,14 @@
 
 
   <TextView
-  android:id="@+id/pet_status"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  app:layout_constraintStart_toStartOf="parent"
-  app:layout_constraintRight_toRightOf="parent"
-  app:layout_constraintTop_toBottomOf="@+id/mana"/>
+    android:id="@+id/pet_status"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp"
+    android:textSize="18dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/mana"/>
 
   <TextView
     android:id="@+id/pet"
