--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,10 @@
       android:icon="@drawable/ic_people_outline_black_24dp"
       android:title="Followers"/>
     <item
+      android:id="@+id/my_wall_drawer_item"
+      android:icon="@drawable/ic_people_outline_black_24dp"
+      android:title="My Wall"/>
+    <item
       android:id="@+id/settings_fragment"
       android:icon="@drawable/ic_settings_black_24dp"
       android:title="Settings"/>
