Settings done and ready to merge back with master branch.

--- a/app/src/main/res/layout/fragment_my_wall.xml
+++ b/app/src/main/res/layout/fragment_my_wall.xml
@@ -5,6 +5,7 @@
   tools:context="edu.cnm.deepdive.emojipets.MyWallFragment">
 
     <TextView
+      android:layout_margin="12dp"
       android:id="@+id/my_wall"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
