Added a Lottie animation. Sign out on back press from MainActivity (if Nav Drawer Closed). Greatly simplified the sign in view to meet Material Design Standards.

--- a/app/src/main/res/drawable/gradient_1.xml
+++ b/app/src/main/res/drawable/gradient_1.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <gradient
     android:angle="225"
-    android:endColor="#f5ec65"
-    android:startColor="#ffd6d3" />
+    android:endColor="#33f"
+    android:startColor="#2211ff" />
 </shape>
