--- a/app/src/main/res/drawable/gradient_3.xml
+++ b/app/src/main/res/drawable/gradient_3.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <gradient
-    android:angle="45"
-    android:endColor="#fff82a"
-    android:startColor="#ff863f" />
+    android:angle="90"
+    android:endColor="#33f"
+    android:startColor="#2211ff"/>
 </shape>
