--- a/app/src/main/res/drawable/gradient_5.xml
+++ b/app/src/main/res/drawable/gradient_5.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <gradient
     android:angle="135"
-    android:endColor="#43bfec"
-    android:startColor="#ffe864" />
+    android:endColor="#33f"
+    android:startColor="#2211ff" />
 </shape>
