--- a/app/src/main/res/drawable/gradient_6.xml
+++ b/app/src/main/res/drawable/gradient_6.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <gradient
     android:angle="225"
-    android:endColor="#fcf655"
-    android:startColor="#9339e2" />
+    android:endColor="#33f"
+    android:startColor="#2211ff" />
 </shape>
