--- a/app/src/main/res/drawable/gradient_7.xml
+++ b/app/src/main/res/drawable/gradient_7.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <gradient
-    android:angle="135"
-    android:endColor="#ef2125"
-    android:startColor="#ffe864" />
+    android:angle="270"
+    android:endColor="#33f"
+    android:startColor="#2211ff"/>
 </shape>
