--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,77 +6,67 @@
   android:id="@+id/layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@drawable/gradient_list"
+  android:background="@color/yellow_emoji_contrast"
   tools:context="edu.cnm.deepdive.emojipets.SignInActivity">
 
-  <TextView
-    android:id="@+id/textView4"
+  <android.support.constraint.Guideline
+    android:id="@+id/left_guide"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="@id/layout"
-    app:layout_constraintLeft_toLeftOf="@id/layout"
-    app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintTop_toTopOf="@id/layout"/>
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent=".25"/>
 
-  <ImageView
-    android:id="@+id/emoji_pets_title"
-    android:layout_width="424dp"
-    android:layout_height="178dp"
-    android:layout_marginTop="68dp"
-    android:layout_marginBottom="8dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.523"
-    app:layout_constraintLeft_toLeftOf="@id/layout"
-    app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintTop_toTopOf="@id/layout"
-    app:layout_constraintVertical_bias="0.0"
-    app:srcCompat="@drawable/emoji_pets_title"/>
-
-  <com.andexert.library.RippleView
-    android:id="@+id/more"
-    android:layout_width="fill_parent"
+  <android.support.constraint.Guideline
+    android:id="@+id/right_guide"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"/>
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent=".75"/>
+
+  <TextView
+    android:id="@+id/sign_in_title"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    android:layout_marginTop="72dp"
+    android:fontFamily="@font/lato_light"
+    android:text="@string/emoji_petz"
+    android:textColor="@color/yellow_emoji"
+    android:textSize="64dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+
+  <com.airbnb.lottie.LottieAnimationView
+    android:id="@+id/emoji_pets_title"
+    android:layout_width="0dp"
+    android:layout_height="256dp"
+    android:padding="20dp"
+    app:layout_constraintLeft_toLeftOf="@id/left_guide"
+    app:layout_constraintRight_toRightOf="@id/right_guide"
+    app:layout_constraintTop_toBottomOf="@id/sign_in_title"
+    app:lottie_fileName="animation-w1100-h1072.json"
+    app:lottie_loop="true"
+    app:lottie_autoPlay="true"/>
+
+  <!--<com.andexert.library.RippleView-->
+    <!--android:id="@+id/more"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_margin="5dp"/>-->
 
   <Button
     android:id="@+id/imageButton1"
-    android:layout_width="175dp"
-    android:layout_height="150dp"
-    android:background="@drawable/button"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="@id/layout"
-    app:layout_constraintRight_toRightOf="@id/layout"
-    app:layout_constraintTop_toBottomOf="@id/emoji_pets_title"
-    app:layout_constraintVertical_bias="0.398"
-    app:srcCompat="@drawable/new_game_button"/>
-  <TextView
-    android:id="@+id/textView2"
-    android:textStyle="bold|italic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:fontFamily="serif"
-    android:text="Sign In "
-    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-    android:textSize="20sp"
+    android:layout_marginBottom="96dp"
+    android:background="@drawable/sign_in_invert_selector"
+    android:fontFamily="@font/lato_light"
+    android:text="@string/sign_in"
+    android:textColor="@drawable/sign_in_button_color_invert_selector"
+    android:textSize="24dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/imageButton1"
-    app:layout_constraintVertical_bias="0.0"/>
-
-  <!--<ImageButton-->
-    <!--android:id="@+id/imageButton2"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@null"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--app:layout_constraintHorizontal_bias="0.501"-->
-    <!--app:layout_constraintLeft_toLeftOf="@id/layout"-->
-    <!--app:layout_constraintRight_toRightOf="@id/layout"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/imageButton1"-->
-    <!--app:srcCompat="@drawable/saved_button"/>-->
+    app:layout_constraintRight_toRightOf="parent"/>
 
   <!--<Button-->
     <!--android:id="@+id/imageButton"-->
