--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#000000</color>
+  <color name="colorPrimaryDark">#FF000000</color>
   <color name="colorAccent">#FF4081</color>
   <color name="white">#FFFFFF</color>
   <color name="primary_color">#ffe850</color>
@@ -11,7 +11,9 @@
   <color name="food_color1">#ff0000</color>
   <color name="food_color2">#ff7300</color>
   <color name="potty_color1">#8cfda1</color>
-  <color name="potty_color2">#ffea00</color>
+  <color name="potty_color2">#f5d881</color>
+  <color name="yellow_emoji">#f5d881</color>
+  <color name="yellow_emoji_contrast">#2211ff</color>
   <color name="hug_color1">#dd00ff</color>
   <color name="hug_color2">#00b2ff</color>
   <color name="signout">#87f4e7</color>
