I have configured (with Chris's help) the AWS server to run the EmojiPets Spring implementation backend.  The frone-end repo, here, has been updated to connect with that backend.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
   <color name="potty_color1">#8cfda1</color>
   <color name="potty_color2">#f5d881</color>
   <color name="yellow_emoji">#f5d881</color>
-  <color name="yellow_emoji_contrast">#2211ff</color>
+  <color name="yellow_emoji_contrast">#4422dd</color>
   <color name="hug_color1">#dd00ff</color>
   <color name="hug_color2">#00b2ff</color>
   <color name="signout">#87f4e7</color>
