--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/nav_header_vertical_spacing"
-    android:text="Android Studio"
+    android:text="@string/emoji_pets"
     android:textColor="@color/colorPrimaryDark"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
@@ -33,6 +33,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@color/colorPrimaryDark"
-    android:text="android.studio@android.com"/>
+    android:text="@string/they_love_you"/>
 
 </LinearLayout>
